--- a/html/Q&A.html
+++ b/html/Q&A.html
@@ -76,22 +76,27 @@
             </div>
           </nav>
     <main>
-        <div class="qanda-container">
+        <div class="container qanda-container">
             <h2>¿Cuales son las formas de pago?</h2>
+            <hr class="mb-4 mt-0 d-inline-block mx-auto" style="width: 150px; background-color: #1572A1; height: 2px"/>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi quisquam iusto facilis quaerat tempore enim consequuntur quas asperiores sint! Nemo veniam fugiat commodi beatae facilis, placeat consequatur dicta iusto hic!
 
             </p><br>
             <h2>¿los productos se ecuentran en stock?</h2>
+            <hr class="mb-4 mt-0 d-inline-block mx-auto" style="width: 150px; background-color: #1572A1; height: 2px"/>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum voluptatem enim nemo recusandae, temporibus quasi sit reprehenderit animi reiciendis, unde explicabo minima vero exercitationem neque adipisci provident quo facilis libero!</p>
             <h2>¿Hacen envios?</h2>
+            <hr class="mb-4 mt-0 d-inline-block mx-auto" style="width: 150px; background-color: #1572A1; height: 2px"/>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis ex ab sunt a in quasi ullam esse maiores commodi nisi consectetur eaque blanditiis sed atque impedit mollitia sint, unde iste.
 
             </p><br>
             <h2>¿Son precios finales?</h2>
+            <hr class="mb-4 mt-0 d-inline-block mx-auto" style="width: 150px; background-color: #1572A1; height: 2px"/>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos quis aliquam neque delectus dolor recusandae molestiae est sint, error sed ab modi obcaecati minus. Fugiat beatae recusandae aliquam modi velit.
 
             </p>
             <h2>¿Entregan factura y garantia?</h2>
+            <hr class="mb-4 mt-0 d-inline-block mx-auto" style="width: 150px; background-color: #1572A1; height: 2px"/>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum non fuga a repudiandae. Omnis, voluptatem? Pariatur, tempora inventore! Optio, natus perspiciatis reprehenderit rerum aliquam iure voluptatem tempora nesciunt doloremque enim!
 
             </p><br>
