--- a/html/nosotros.html
+++ b/html/nosotros.html
@@ -76,8 +76,11 @@
             </div>
           </nav>
     <main>
+      <div class="container">
      <h2>QUIENES SOMOS</h2>
+     <hr class="mb-4 mt-0 d-inline-block mx-auto" style="width: 150px; background-color: #1572A1; height: 2px"/>
      <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque dicta recusandae ipsam necessitatibus in consequatur laudantium voluptatibus ratione vitae voluptatum nostrum fugiat deleniti quidem, ab praesentium. Eius ipsum quas expedita!</P>
+    </div>
     </main>
     <hr>
     <footer class="text-center text-lg-start text-dark" style="background-color: #ECEFF1">
